# edge-bookmark

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.bootstrap-publish/: part-00  part-01  part-02  part-03  part-04  part-05  part-06  part-07  part-08  part-09  part-10  part-11  part-12  part-13
.github/workflows/: publish-clean-tree.yml
config/: rules.yaml
docs/design/: DESIGN.md
docs/superpowers/specs/: 2026-05-02-review-feedback-pipeline-design.md
extension/: AGENTS.md  action_constants.js  ai_planner.js  fast_rules.json  manifest.json  offscreen.html  offscreen.js  plan_lint.js  popup.html  popup.js  service_worker.js  storage_helpers.js
skills/bookmark-reorg/: SKILL.md
skills/bookmark-url-review/: SKILL.md
skills/bookmark-url-review/references/: review-contract.md
src/bookmark_advisor/: AGENTS.md  __init__.py  __main__.py  ai_planner.py  analysis.py  backup.py  cli.py  executor.py  job_runner.py  models.py  parser.py  planner.py  reporting.py  rules.py  snapshot_io.py  utils.py
tests/: AGENTS.md  test_ai_planner_compat.py  test_atomic_write.py  test_extension_endpoint_urls.py  test_extension_plan_lint.py  test_extension_popup_state.py  test_extension_service_worker_state.py  test_planner.py  test_prompt_parity.py  test_prompt_sanitization.py  test_reorg_job.py  test_rules.py  test_rules_parity.py  test_semantic_flow.py  test_url_parity.py  test_utils.py
