[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmark-advisor"
version = "0.1.0"
description = "Local Edge bookmark organizer with backup, advise mode, and merge mode."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Codex" }
]
dependencies = [
  "openai>=1.0.0",
]

[project.scripts]
bookmark-advisor = "bookmark_advisor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
